crates/tinc/build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__map__tests__map_runtime_map.snap
---
source: crates/tinc/build/src/codegen/cel/functions/map.rs
expression: "postcompile::compile_str!(postcompile::config!\n{\n    test: true, dependencies:\n    vec![postcompile::Dependency::workspace(\"tinc\"),],\n}, quote!\n{\n    fn filter(input: &std::collections::BTreeMap<String, i32>) ->\n    Result<::tinc::__private::cel::CelValue<'_>,\n    ::tinc::__private::cel::CelError<'_>> { Ok(#output) } #[test] fn\n    test_filter()\n    {\n        assert_eq!(filter(&{\n            let mut map = std::collections::BTreeMap::new();\n            map.insert(\"0\".to_string(), 0); map.insert(\"1\".to_string(), 1);\n            map.insert(\"2\".to_string(), -50); map.insert(\"3\".to_string(), 50);\n            map\n        }).unwrap(),\n        ::tinc::__private::cel::CelValue::List([::tinc::__private::cel::CelValueConv::conv(0),\n        ::tinc::__private::cel::CelValueConv::conv(2),\n        ::tinc::__private::cel::CelValueConv::conv(-100),\n        ::tinc::__private::cel::CelValueConv::conv(100),].into_iter().collect()));\n    }\n},)"
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s
--- expanded
#![feature(prelude_import)]
#[prelude_import]
use std::prelude::rust_2024::*;
#[macro_use]
extern crate std;
fn filter(
    input: &std::collections::BTreeMap<String, i32>,
) -> Result<::tinc::__private::cel::CelValue<'_>, ::tinc::__private::cel::CelError<'_>> {
    Ok({
        let mut collected = Vec::new();
        let mut iter = ((input).keys()).into_iter();
        loop {
            let Some(item) = iter.next() else {
                break ::tinc::__private::cel::CelValue::List(collected.into());
            };
            collected
                .push(
                    ::tinc::__private::cel::CelValue::cel_mul(
                        ::tinc::__private::cel::CelValue::Number(
                            ::tinc::__private::cel::NumberTy::I64(2i64),
                        ),
                        ::tinc::__private::cel::CelValueConv::conv(
                            ::tinc::__private::cel::map_access(
                                input,
                                ::tinc::__private::cel::CelValueConv::conv(item),
                            )?,
                        ),
                    )?,
                );
        }
    })
}
